# tools

./: Cargo.toml
dupdb-frontend/: Cargo.toml  index.html
dupdb-frontend/src/: fixedthreadpool.rs  main.rs
duplicate-file-monitor/: .gitignore  Cargo.toml  README.md
duplicate-file-monitor/src/: dupdb.rs  main.rs  sql.rs
duplicate-file-monitor/test/nodupes/: also-not-a-dupe-file.txt  not-a-dupefile.txt
gamepad/: Cargo.toml
gamepad/src/: main.rs
nav-update/: Cargo.toml
nav-update/src/: lib.rs  main.rs
phoneflap/: Cargo.toml
phoneflap/src/: lib.rs  main.rs
sentiment-cli/: .gitignore  Cargo.toml
sentiment-cli/src/: main.rs
sentimentuber/: Cargo.toml  rules.json
sentimentuber/src/: cli.rs  gui.rs  lib.rs  main.rs  obs.rs  rules.rs  sentiment.rs
