[package]
name = "sentimentuber"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
notify = "8.0.0"
obws = "0.14.0"
vader_sentiment = "0.1.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.138"
clap = { version = "4.5.27", features = ["derive"] }
notify-debouncer-mini = "0.6.0"
serde = "1.0.217"
eframe = "0.31.1"
egui_extras = {version = "0.31.1", features = ["all_loaders"]}
image = { version = "*", features = ["png"] }